<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medkit_correllation_example</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="etiennev@tessellate-robotics.com">etienne</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros2_medkit_fault_reporter</depend>
  
  <exec_depend>ros2_medkit_fault_manager</exec_depend>
  <exec_depend>ros2_medkit_gateway</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
